# Safe-built

./: .gitignore  README.md  dfx.json  package-lock.json  package.json
.dfx/local/: canister_ids.json  (+1 more)
BlockHero/: .env  .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
BlockHero/src/BlockHero_backend/: BlockHero_backend.did  Cargo.toml  dfx.json
BlockHero/src/BlockHero_backend/.dfx/network/local/: replica-effective-config.json
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/: registry.proto
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/afaae1e3a02bd8ec832ab318fa2ef257e7ab791b06d8c4da04488deddef3339c/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/f3e0a9711469429c3d961cd911fea7495e3919476b8d5de66cba203f05d9a734/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/.dfx/network/local/state/replicated_state/f6e1536cfa03619fa842317c43a6db0b4b00b516bdf01d2725e4f862b9a92925/: states_metadata.pbuf
BlockHero/src/BlockHero_backend/src/: lib.rs  types.rs
(+74 files in other folders)
