[package]
name = "BlockHero_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.11"
serde = "1.0.197"
sha2 = "0.10.8"
hex = "0.4.3"
vetkd-system-api = { git = "https://github.com/dfinity/vetkd-system-api.git", branch = "main" }
